@@ -4,6 +4,10 @@ import com.example.colectivoIkuna.application.dto.request.CulturalProjectDTO;
 import com.example.colectivoIkuna.application.mapper.CulturalProjectMapper;
 import com.example.colectivoIkuna.application.usecases.IkunaManagerUseCase;
 import jakarta.validation.Valid;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import lombok.RequiredArgsConstructor;
 import java.util.List;
@@ -15,28 +19,27 @@ import java.util.stream.Collectors;
 @CrossOrigin(origins = "*") // Agregado para evitar problemas de CORS con React
 public class IkunaDashboardController {
 
-  private final IkunaManagerUseCase ikunaManager;
-  private final CulturalProjectMapper projectMapper; // Spring inyectará la implementación generada
+  private final IkunaManagerUseCase ikunaUseCase;
+  private final CulturalProjectMapper projectMapper;
 
   @GetMapping("/portfolio")
-  public List<CulturalProjectDTO> getPortfolio() {
-    return ikunaManager.getPortfolio().stream()
-        .map(projectMapper::toDTO)
-        .collect(Collectors.toList());
+  public ResponseEntity<List<CulturalProjectDTO>> getPortfolio() {
+    var dtos = ikunaUseCase.getPortfolio().stream()
+            .map(projectMapper::toDTO)
+            .toList();
+    return ResponseEntity.ok(dtos);
   }
 
   @PostMapping("/projects")
-  public CulturalProjectDTO createProject(@Valid @RequestBody CulturalProjectDTO dto) {
-    var entity = projectMapper.toEntity(dto);
-    var saved = ikunaManager.launchOrUpdateProject(entity);
-    return projectMapper.toDTO(saved);
+  public ResponseEntity<CulturalProjectDTO> createProject(@RequestBody CulturalProjectDTO dto) {
+      var savedProject = ikunaUseCase.launchOrUpdateProject(projectMapper.toEntity(dto));
+      return new ResponseEntity<>(projectMapper.toDTO(savedProject), HttpStatus.CREATED);
   }
 
   @PutMapping("/projects/{id}")
-  public CulturalProjectDTO updateProject(@PathVariable Long id,@Valid @RequestBody CulturalProjectDTO dto) {
+  public ResponseEntity<CulturalProjectDTO> updateProject(@PathVariable Long id, @Valid @RequestBody CulturalProjectDTO dto) {
     dto.setId(id);
-    var entity = projectMapper.toEntity(dto);
-    var saved = ikunaManager.launchOrUpdateProject(entity);
-    return projectMapper.toDTO(saved);
+    var updated = ikunaUseCase.launchOrUpdateProject(projectMapper.toEntity(dto));
+    return ResponseEntity.ok(projectMapper.toDTO(updated));
   }
 }
